Make cross-platform, standardize build, add antialiased font rendering and README
- Rewrite hardware monitoring to support Linux (proc/sys) and Windows (WMI) at runtime
- Align pom.xml to project standard (maven-shade-plugin 3.6.0, compiler 3.13.0, Java 24)
- Enable system-wide Swing font antialiasing
- Add README

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>